<resources>
    <string name="app_name">Lucid Dreaming App</string>
<string name="graph">Show Graph</string>
<string name="graph_title">Graph Viewer</string>
<string name="accelerometer_menu">Lucid Dreaming Alpha</string>
<string name="menu_save_csv">Save as CSV</string>
<string name="menu_graph_from_file">Load JSON Graph</string>
<string name="menu_save_json">Save</string>
<string name="main_menu_exit">Exit</string>
<string name="menu_start_app">Start</string>
<string name="menu_view_data">View Data</string>
<string name="menu_graph">Graph</string>
<string name="menu_list">List</string>
<string name="menu_clock">Clock</string>
<string name="menu_load_graph">Load Graph</string>
<string name="menu_view_history">View History</string>
<string name="menu_create_history">Create History</string>
<string name="menu_load">Load</string>
<string name="menu_app_help">App Help</string>
<string name="menu_view_data_help">View Data Help</string>
<string name="menu_online_help">Online Help</string>
<string name="menu_start_calibration">Start Calibration</string>
<string name="menu_cancel_calibration">Cancel Calibration</string>
<string name="file_selector_text">Pick a sound file</string>
<string name="select_file">Select File</string>
<string name="menu_preferences">Preferences</string>
<string name="set_preferences">Set Preferences</string>
<string name="default_reminder_filepath">sdcard/Recordings/lucid.mp3</string>
<string name="calibration_pref_default">not calibrated</string>
<string name="start_app_main_menu">Start app</string>
<string name="main_menu_calibrate_accelerometer">Calibrate</string>
<string name="main_menu_view_data">View Data</string>
<string name="main_menu_send_data">Contribute to Science!</string>
<string name="main_menu_start_app">Start!</string>
<string name="main_menu_start_app_disabled">Calibrate device before starting the app </string>
<string name="menu_exit_app">Exit</string>
<string name="mp3_fileselector_text">Pick your new voice reminder</string>
<string name="mp3_file_selector_label">Select voice reminder mp3</string>
    <string name="application_name">Gestures Builder</string>
    <string name="label_create_gesture">Create a gesture</string>
    <string name="button_add">Add gesture</string>
    <string name="button_reload">Reload</string>
    <string name="button_discard">Discard</string>
    <string name="button_done">Done</string>
    <string name="prompt_gesture_name">Name</string>
    <string name="error_missing_name">You must enter a name</string>
    <string name="save_success">Gesture saved in %s</string>
    <string name="rename_action">OK</string>
    <string name="cancel_action">Cancel</string>
    <string name="gestures_loading">Loading gestures...</string>
    <string name="gestures_empty">No gestures</string>
    <string name="gestures_activity">Gestures</string>
    <string name="gestures_rename">Rename</string>
    <string name="gestures_delete">Delete</string>
    <string name="gestures_delete_success">Gesture deleted</string>
    <string name="gestures_rename_title">Rename gesture</string>
    <string name="gestures_rename_label">Gesture name</string>
    <string name="gestures_error_loading">Could not load %s. Make sure you have a mounted SD card.</string>
    <string name="main_menu_more_options">More</string>
    <string name="main_menu_help">Help</string>
      <string name="rem_reminder_screen_title">REM Reminders</string>
      <string name="pref_play_sound_reminders">Play voice reminders </string>
      <string name="pref_play_sound_reminders_summary">Plays reminders when conditions are met. Unchecking this option disables all sound and vibrate reminders. The app still functions as an actigraph</string>
      <string name="rem_prediction_screen_title">REM Prediction Preferences </string>
      <string name="rem_prediction_screen_summary">Configure Smart Timer for more accurate REM prediction. Enabling this preference disables old REM detection method.</string>
	<string name="pref_enable_smart_timer_title">Enable Smart Timer</string>
	<string name="pref_enable_smart_timer_summary">Enables voice reminders at certain parts of the night that correspond to REM. Needs to be configured first</string>
	<string name="pref_configure_smart_timer_title">Configure Smart Timer</string>
	<string name="pref_configure_smart_timer_summary">Configures times used by Smart Timer. All times are relative to sleep cycles</string>
	<string name="pref_minimum_reminder_spacing_title">Minimum time between reminders</string>
	<string name="pref_minimum_reminder_spacing_summary">REM prediction may trigger multiple times in close proximity to each other(if Smart Timer reminder on movement is selected). Use this option to limit the number of reminders played close to each other</string>
	 <string name="pref_minimum_reminder_spacing_dialog_text">Set minimum spacing between reminders</string>
    <string name="pref_minimum_reminder_spacing_units_text"> minutes</string>
	<string name="pref_rem_prediction_activity_threshold_title">REM prediction activity threshold</string>
	<string name="pref_rem_prediction_activity_threshold_summary">Sum of sleep scores during REM periods that will trigger a reminder (if Smart Timer reminder on movement is selected). Lower numbers will result in reminders closer to the start of expected REM period. Large numbers may never  trigger a reminder</string>
     <string name="pref_rem_prediction_activity_threshold_dialog_text">The app will play the reminder (one minute apart)</string>
    <string name="pref_rem_prediction_activity_threshold_units_text"> times</string>
      <string name="rem_detection_screen_title">[Obsolete]REM Detection Preferences</string>
      <string name="rem_detection_screen_summary">[REM prediction with Smart Timer is more effective]. Allows you to fine tune reminder delivery on movement. Enabling Smart Timer disables these settings.</string>
	<string name="pref_play_sound_reminders_non_rem_title">Play sound in non-REM</string>
	<string name="pref_play_sound_reminders_non_rem_summary">Enables sound playback for &quot;Maximum time asleep&quot; behavior</string>
	<string name="pref_number_of_reminders_title">Number of consecutive reminders</string>
	<string name="pref_number_of_reminders_summary">It may take more than one reminder to influence deep sleep. Use this option to set how many times the reminder will be played (once per minute, if you do not respond)</string>
    <string name="pref_number_of_reminders_dialog_text">The app will play the reminder (one minute apart)</string>
    <string name="pref_number_of_reminders_units_text"> times</string>
    <string name="pref_screen_early_night_title">Early Night Behavior</string>
	<string name="pref_screen_early_night_summary">Use these options to adjust how the app behaves before 120 minutes of sleep was scored</string>
    <string name="pref_screen_mid_night_title">Middle of the Night Behavior</string>
	<string name="pref_screen_mid_night_summary">Use these options to adjust how the app behaves after 120 minutes but before 180 minutes of sleep was scored</string>
    <string name="pref_screen_late_night_title">Late Night Behavior</string>
	<string name="pref_screen_late_night_summary">Use these options to adjust how the app behaves after 180 minutes of sleep was scored</string>
	<string name="pref_min_asleep_title">Minimum time asleep</string>
	<string name="pref_min_asleep_summary">How many minutes you have to be asleep before the reminder will activate on movement. Ensure this is long enough for you to fall asleep</string>
    <string name="pref_min_asleep_dialog_text">Earliest the reminder will play</string>
    <string name="pref_min_asleep_text"> minutes</string>
	<string name="pref_max_asleep_title">Maximum time asleep</string>
	<string name="pref_max_asleep_summary">If you have slept still for this many minutes, the reminder will be played. If you set this to 45 you will sleep for at least 45 minutes before reminder is played</string>
    <string name="pref_max_asleep_dialog_text">Latest the reminder will play</string>
    <string name="pref_max_asleep_text"> minutes</string>
     <string name="customize_gestures_title">Customize Gestures</string>
	<string name="pref_enable_gestures_title">Enable gestures for user events</string>
	<string name="pref_enable_gestures_summary">Gestures allow you to mark dreams, lucid dreams and awakenings at night without typing or menu interaction</string>
	<string name="pref_edit_gestures_title">Edit gestures</string>
	<string name="pref_edit_gestures_summary">Click you to add,edit and delete gestures in the app</string>
	<string name="pref_gestures_sensitivity_title">Adjust gestures sensitivity</string>
	<string name="pref_gestures_sensitivity_summary">Lowering this value increases the odds that the app will accept, but misunderstand the gesture</string>
     <string name="customize_reminders_title">Customize Reminders and Notifications</string>
     <string name="pref_get_voice_recorder_title">Get / Start  MP3 recorder</string>
	 <string name="pref_get_voice_recorder_summary">Get Hi-Q Mp3 recorder-lite from market, or Start it to record a new reminder if it is installed</string>
	 <string name="pref_file_selection_override">Use built-in file selector</string>
     <string name="pref_file_selection_override_summary">Set this option to enable built-in file selection from the root of SDCard. The resulting path may look like /mnt/sdcard/Recordings. Leave unchecked to use OI File manager to select reminders</string>
     <string name="pref_pick_voice_reminder_title">Pick voice reminder</string>
	 <string name="pref_pick_voice_reminder_summary">Select a sound file that will remind you to become lucid in your dreams.</string>
     <string name="pref_play_voice_reminder_title">Play current reminder</string>
	 <string name="pref_play_voice_reminder_summary">Plays the currently selected lucid dreaming reminder, so you can adjust the volume</string>
     <string name="pref_challenging_math_puzzle_title">Use challenging Math puzzle</string>
	 <string name="pref_challenging_math_puzzle_summary">Math puzzle will add 2 numbers to current time instead of 1 if this option is chosen. Bring up math puzzle with "Math" gesture</string>
	<string name="pref_clock_digit_title">Clock digit size</string>
	<string name="pref_clock_digit_summary">Adjust the clock size in case it does not fit on your screen</string>
    <string name="pref_clock_digit_dialog_text">New clock digit size: </string>
    <string name="pref_clock_digit_units_text"> scaled pixels</string>
     <string name="pref_pick_clock_color_title">Pick clock color</string>
	 <string name="pref_pick_clock_color_summary">Customize your clock with cool colors! Clock is available when the app is started, you may view it instead of graph or list view</string>
     <string name="app_calibration_title">App Calibration</string>
     <string name="pref_screen_app_calibration_title">Calibrate device sensors</string>
	 <string name="pref_screen_app_calibration_summary">Allows you to calibrate your device sensors to reduce noise and improve sensitivity</string>
     <string name="pref_actigraphy_sampling_rate_title">Actigraphy sampling rate</string>
	 <string name="pref_actigraphy_sampling_rate_summary">Controls how fast the app samples activity. Changing this setting requires device recalibration. Picking lower value may improve performance on older devices</string>
	<string name="pref_accelerometer_calibration_duration_title">Accelerometer calibration duration</string>
 	<string name="pref_switch_smart_timer_config_title">Select Smart Timer configuration file</string>
	<string name="pref_switch_smart_timer_config_summary">Changes the Smart Timer configuration without the need to edit values. Allows you to quickly change Smart Timer behavior</string>
</resources>